--- a/client/package.json
+++ b/client/package.json
@@ -10,19 +10,27 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@thirdweb-dev/react": "^4.9.4",
+    "@thirdweb-dev/sdk": "^4.0.99",
+    "client": "file:",
     "dotenv": "^16.4.5",
+    "ethers": "^5.7.2",
+    "flatpickr": "^4.6.13",
     "react": "^18.3",
     "react-dom": "^18.3",
+    "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.24.0",
     "thirdweb": "^5",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
